--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div id="notice" class="section">
     <div class="container">
       <p class="notice">たかつきりんく名義での活動内容はこちら</p>
-      <p><small>※成人向けの項目を含みます</small></p>
+      <p><small>※一部成人向けの項目を含みます</small></p>
     </div>
   </div>
   <!-- イラスト(非表示) -->
@@ -132,9 +132,10 @@
   <div id="footer" class="section">
     <div class="container">
       <p>&copy; 2016 - 2017 Canzone, Built with <a href="http://drossel.io/" target="_blank">drossel</a>.</p>
-      <p><small>サイト内に掲載されているイラスト等の無断転載はご遠慮ください / This website available Japanese language only.</small>
+      <p><small>サイト内に掲載されているイラスト等の無断転載はご遠慮ください / This website available on Japanese.</small>
     </div>
   </div>
+  <!-- CSS/JavaScript -->
   <link rel="stylesheet" href="styles.css">
   <script>
     const notice = document.getElementById('notice');
