--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <div id="footer" class="section">
     <div class="container">
       <p>&copy; 2016 - 2017 Canzone, Built with <a href="http://drossel.io/" target="_blank">drossel</a>.</p>
-      <p><small>サイト内に掲載されているイラスト等の無断転載はご遠慮ください / This website available on Japanese.</small>
+      <p><small>サイト内に掲載されているイラスト等の無断転載はご遠慮ください / Unauthorized reproduction is prohibited.</small>
     </div>
   </div>
   <!-- CSS/JavaScript -->
